<resources>
    <string name="app_name">Learning Kotlin App</string>
    <string name="happy_25th_birthday_me">Happy 25th Birthday Me!</string>
    <string name="birthday_cupcake_image_for_app">birthday cupcake image for app</string>
    <string name="from_danny">From Danny!</string>
    <string name="go_to_list_view">go to list view</string>
    <string name="go_to_tip_calculator">go to tip calculator</string>
    <string name="go_to_dice_roller">Go to Dice Roller</string>
    <string name="go_to_birthday_card">Go To Birthday Card</string>
    <string name="welcome_to_beginner_app">Welcome to beginner app!</string>
    <string name="roll">Roll</string>
    <string name="dice_image_one">image view for dice image</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="meh_10">Meh (10%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="calculate">Calculate</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="go_to_auth">Go To Auth</string>
    <string name="auth_endpoint_tester">Auth Endpoint Tester</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="auth_name_text">Name:</string>
    <string name="password_text">Password:</string>
    <string name="log_in">Log In</string>
    <string name="please_note_that_you_need_to_have_the_snowboarding_api_running_check_github_in_order_for_this_functionality_to_work">Please note that you need to have the Snowboarding-API running (check github) in order for this functionality to work.</string>
</resources>